--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,40 +4,63 @@ on:
   push:
     branches:
       - "*"
+    tags:
+      - 'release-*'
+    workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      BUNDLENAME: ${{ steps.compute.outputs.BUNDLENAME }}
     steps:
-    - name: Compute parameters
-      id: compute
-      run: |
-        BUNDLENAME=criu-crac-build-${{ github.run_number }}
-        for i in BUNDLENAME; do
-          echo "::set-output name=${i}::${!i}"
-        done
+      - name: Compute parameters
+        id: compute
+        run: |
+          if [ ${{ startsWith(github.ref, 'refs/tags/' }} = true ]; then
+            TAG=${GITHUB_REF##refs/tags/}
+            BUNDLENAME=criu-crac-${TAG}
+          else
+            TAG=notag
+            BUNDLENAME=criu-crac-build-${{ github.run_number }}
+          fi
+          for i in TAG BUNDLENAME; do
+            echo "::set-output name=${i}::${!i}"
+          done
 
-    - name: Start build container
-      run: echo ${GITHUB_TOKEN} | docker login -u ${GITHUB_ACTOR} --password-stdin docker.pkg.github.com;
-        docker run -d --name build
-        -w $PWD
-        -v /home/runner:/home/runner
-        -u $(id -u):$(id -g)
-        --entrypoint tail
-        docker.pkg.github.com/crac/docker-build/image:latest
-        -f /dev/null
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Start build container
+        run: echo ${GITHUB_TOKEN} | docker login -u ${GITHUB_ACTOR} --password-stdin docker.pkg.github.com;
+          docker run -d --name build
+          -w $PWD
+          -v /home/runner:/home/runner
+          -u $(id -u):$(id -g)
+          --entrypoint tail
+          docker.pkg.github.com/crac/docker-build/image:latest
+          -f /dev/null
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - run: make DESTDIR=. PREFIX=/${{ steps.compute.outputs.BUNDLENAME }} install-criu V=1
-      shell: docker exec build bash -e {0}
+      - run: make DESTDIR=. PREFIX=/${{ steps.compute.outputs.BUNDLENAME }} install-criu V=1
+        shell: docker exec build bash -e {0}
 
-    - run: tar -zcf ${{ steps.compute.outputs.BUNDLENAME }}.tar.gz ${{ steps.compute.outputs.BUNDLENAME }}
+      - run: tar -zcf ${{ steps.compute.outputs.BUNDLENAME }}.tar.gz ${{ steps.compute.outputs.BUNDLENAME }}
 
-    - uses: actions/upload-artifact@v3
-      with:
-        name: ${{ steps.compute.outputs.BUNDLENAME }}
-        path: ${{ steps.compute.outputs.BUNDLENAME }}.tar.gz
+      - uses: actions/upload-artifact@v3
+        with:
+          name: ${{ steps.compute.outputs.BUNDLENAME }}
+          path: ${{ steps.compute.outputs.BUNDLENAME }}.tar.gz
+
+  release:
+    needs: build
+    if: ${{ startsWith(github.ref, 'refs/tags/' }}
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: ${{ needs.build.outputs.BUNDLENAME }}
+      - uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            ${{ steps.compute.outputs.BUNDLENAME }}.tar.gz
 
