--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Compute parameters
         id: compute
         run: |
-          if [ ${{ startsWith(github.ref, 'refs/tags/' }} = true ]; then
+          if [ ${{ startsWith(github.ref, 'refs/tags/') }} = true ]; then
             TAG=${GITHUB_REF##refs/tags/}
             BUNDLENAME=criu-crac-${TAG}
           else
