--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,7 @@ jobs:
           path: ${{ steps.compute.outputs.BUNDLENAME }}.tar.gz
 
   release:
+    runs-on: ubuntu-latest
     needs: build
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     steps:
